Refactor project to use PlatformIO for Arduino development

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 teste
 __pycache__
+
+arduino_code/.pio
+arduino_code/.vscode/.browse.c_cpp.db*
+arduino_code/.vscode/c_cpp_properties.json
+arduino_code/.vscode/launch.json
+arduino_code/.vscode/ipch
